# Aevum-Bond

./: ANALYSIS_INCOMPLETE_FILES.md  Cargo.toml  GITHUB_SETUP.md  README.md  RELATORIO_ARQUIVOS_INCOMPLETOS.md  STATUS.md  verificar.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
aevum-core/: Cargo.toml
aevum-core/src/: consensus.rs  lib.rs  placeholder.rs  transaction.rs
bond-core/: Cargo.toml
bond-core/src/: block.rs  blockchain.rs  error.rs  lib.rs  mining.rs  script.rs  transaction.rs  utxo.rs
deployment/: README.md  network-test.sh  start-bootstrap.sh  start-miner.sh  start-wallet.sh
docs/: README.md  agile-framework.md  copilot-claude-prompting-guide.md  copilot-prompting-guide.rs  development-best-practices.md  especificacoes-tecnicas.md  git-workflow.md  project-structure.md  security-performance.md  whitepaper.md
shared/: Cargo.toml
shared/src/: crypto.rs  error.rs  hash.rs  lib.rs  types.rs
src/: main.rs  main_full.rs.backup  network.rs  network_broken.rs  network_old.rs
