[package]
name = "aevum-bond"
version = "0.1.0"
edition = "2024"

[dependencies]
bond-core = { path = "bond-core" }
shared = { path = "shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"

[workspace]
members = ["bond-core", "aevum-core", "shared"]
