[package]
name = "aevum-bond"
version = "0.1.0"
edition = "2024"

[dependencies]
bond-core = { path = "bond-core" }
shared = { path = "shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tracing = "0.1"
tokio = { version = "1.28", features = ["full"] }

# P2P Networking - libp2p
libp2p = { version = "0.52.0", features = [
    "tokio",
    "dns",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "websocket",
    "yamux",
    "identify",
    "ping",
    "kad",
] }
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.17"
clap = { version = "4.3", features = ["derive"] }

[workspace]
members = ["bond-core", "aevum-core", "shared"]
