[package]
name = "aevum-core"
version = "0.1.0"
edition = "2021"
description = "High-performance DPoS blockchain core for Aevum - Account-based model with smart contracts"
license = "MIT"
repository = "https://github.com/oseasmsoares/Aevum-Bond"
readme = "../README.md"
keywords = ["blockchain", "dpos", "smart-contracts", "account-model", "defi"]
categories = ["cryptography", "network-programming", "algorithms"]
authors = ["Aevum Development Team"]

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hex = "0.4"
