[package]
name = "bond-core"
version = "0.1.0"
edition = "2021"
description = "Core blockchain primitives for Bond - UTXO-based blockchain with mining and consensus"
license = "MIT"
repository = "https://github.com/oseasmsoares/Aevum-Bond"
readme = "../README.md"
keywords = ["blockchain", "utxo", "mining", "consensus", "pow"]
categories = ["cryptography", "data-structures", "algorithms"]
authors = ["Aevum Development Team"]

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
